QA1차 수정완료

--- a/petdoc_pc/boardlist.html
+++ b/petdoc_pc/boardlist.html
@@ -198,7 +198,7 @@
                                         하나맘
                                     </p>
                                     <p class="user-lv">
-                                        LV.1.그냥주이니
+                                        <span class="txt-roboto">LV.1.</span>그냥주이니
                                     </p>
                                 </div>
                                 <ul class="left-nav">
@@ -219,8 +219,8 @@
                                             </div>
                                             <div class="text-block">
                                                 <p class="article">달구발바박은곰발바닥</p>
-                                                <p><span class="f_l">나이모래 <i>12월24일</i></span><span class="f_r">댓글
-                                                        10</span></p>
+                                                <p><span class="f_l">나이모래 <i><i class="txt-roboto">12</i>월<i class="txt-roboto">24</i>일</i></span>
+                                                    <span class="f_r">댓글 <i class="txt-roboto">10</i></span></p>
                                             </div>
                                         </li>
                                         <li>
@@ -229,8 +229,7 @@
                                             </div>
                                             <div class="text-block">
                                                 <p class="article">달구발바박은곰발바닥</p>
-                                                <p><span class="f_l">나이모래 <i>12월24일</i></span><span class="f_r">댓글
-                                                        5</span></p>
+                                                <p><span class="f_l">나이모래 <i><i class="txt-roboto">12</i>월<i class="txt-roboto">24</i>일</i></span></p>
                                             </div>
                                         </li>
                                         <li>
@@ -239,8 +238,8 @@
                                             </div>
                                             <div class="text-block">
                                                 <p class="article">달구발바박은곰발바닥</p>
-                                                <p><span class="f_l">나이모래 <i>12월 24</i>일</span><span class="f_r">댓글
-                                                        5</span></p>
+                                                <p><span class="f_l">나이모래 <i><i class="txt-roboto">12</i>월<i class="txt-roboto">24</i>일</i></span>
+                                                    <span class="f_r">댓글 <i class="txt-roboto">1</i></span></p>
                                             </div>
                                         </li>
                                         <li>
@@ -249,8 +248,8 @@
                                             </div>
                                             <div class="text-block">
                                                 <p class="article">달구발바박은곰발바닥</p>
-                                                <p><span class="f_l">나이모래 <i>12월24일</i></span><span class="f_r">댓글
-                                                        5</span></p>
+                                                <p><span class="f_l">나이모래 <i><i class="txt-roboto">12</i>월<i class="txt-roboto">24</i>일</i></span>
+                                                    <span class="f_r">댓글 <i class="txt-roboto">2</i></span></p>
                                             </div>
                                         </li>
                                         <li>
@@ -259,8 +258,8 @@
                                             </div>
                                             <div class="text-block">
                                                 <p class="article">달구발바박은곰발바닥</p>
-                                                <p><span class="f_l">나이모래 <i>12월24일</i></span><span class="f_r">댓글
-                                                        5</span></p>
+                                                <p><span class="f_l">나이모래 <i><i class="txt-roboto">12</i>월<i class="txt-roboto">24</i>일</i></span>
+                                                    <span class="f_r">댓글 <i class="txt-roboto">10</i></span></p>
                                             </div>
                                         </li>
                                         <li>
@@ -269,8 +268,8 @@
                                             </div>
                                             <div class="text-block">
                                                 <p class="article">달구발바박은곰발바닥</p>
-                                                <p><span class="f_l">나이모래 <i>12월24일</i></span><span class="f_r">댓글
-                                                        5</span></p>
+                                                <p><span class="f_l">나이모래 <i><i class="txt-roboto">12</i>월<i class="txt-roboto">24</i>일</i></span>
+                                                    <span class="f_r">댓글 <i class="txt-roboto">10</i></span></p>
                                             </div>
                                         </li>
                                         <li>
@@ -279,8 +278,8 @@
                                             </div>
                                             <div class="text-block">
                                                 <p class="article">꾸깃냥</p>
-                                                <p><span class="f_l">나이모래 <i>12월24일</i></span><span class="f_r">댓글
-                                                        5</span></p>
+                                                <p><span class="f_l">나이모래 <i><i class="txt-roboto">12</i>월<i class="txt-roboto">24</i>일</i></span>
+                                                    <span class="f_r">댓글 <i class="txt-roboto">10</i></span></p>
                                             </div>
                                         </li>
                                         <li>
@@ -289,8 +288,8 @@
                                             </div>
                                             <div class="text-block">
                                                 <p class="article"><span class="txt-new">NEW</span>꾸깃냥</p>
-                                                <p><span class="f_l">나이모래 <i>12월24일</i></span><span class="f_r">댓글
-                                                        5</span></p>
+                                                <p><span class="f_l">나이모래 <i><i class="txt-roboto">12</i>월<i class="txt-roboto">24</i>일</i></span>
+                                                    <span class="f_r">댓글 <i class="txt-roboto">10</i></span></p>
                                             </div>
                                         </li>
                                         <li>
@@ -299,8 +298,8 @@
                                             </div>
                                             <div class="text-block">
                                                 <p class="article">달구발바박은곰발바닥</p>
-                                                <p><span class="f_l">나이모래 <i>12월24일</i></span><span class="f_r">댓글
-                                                        5</span></p>
+                                                <p><span class="f_l">나이모래 <i><i class="txt-roboto">12</i>월<i class="txt-roboto">24</i>일</i></span>
+                                                    <span class="f_r">댓글 <i class="txt-roboto">10</i></span></p>
                                             </div>
                                         </li>
                                         <li>
@@ -309,8 +308,8 @@
                                             </div>
                                             <div class="text-block">
                                                 <p class="article">달구발바박은곰발바닥</p>
-                                                <p><span class="f_l">나이모래 <i>12월24일</i></span><span class="f_r">댓글
-                                                        5</span></p>
+                                                <p><span class="f_l">나이모래 <i><i class="txt-roboto">12</i>월<i class="txt-roboto">24</i>일</i></span>
+                                                    <span class="f_r">댓글 <i class="txt-roboto">10</i></span></p>
                                             </div>
                                         </li>
                                     </ul>
