--- a/petdoc_pc/edit_myinfo.html
+++ b/petdoc_pc/edit_myinfo.html
@@ -200,7 +200,7 @@
                                     <div class="pop-cont">
                                         <h3 class="txt-tit">이메일 정보 수신 동의</h3>
                                         <div class="txt-dsc">
-                                            고객님은 2020년 1월 15일자로 이메일 정보 <br>수신에 동의했습니다.
+                                            고객님은 <i class="txt-roboto">2020</i>년 <i class="txt-roboto">1</i>월 <i class="txt-roboto">15</i>일자로 이메일 정보 <br>수신에 동의했습니다.
                                         </div>
                                         <div class="wrap-btn-global btn-deep-blue w288">
                                             <input type="button" title="name" alt="확인" value="확인" class="btn-global"
@@ -221,7 +221,7 @@
                                         하나맘
                                     </p>
                                     <p class="user-lv">
-                                        LV.1.그냥주이니
+                                        <span class="txt-roboto">LV.1.</span>그냥주이니
                                     </p>
                                 </div>
                                 <ul class="left-nav">
@@ -265,7 +265,7 @@
                                                     </th>
                                                     <td>
                                                         <input type="email" value="" placeholder="">
-                                                        <p class="txt-m">이메일 인증 시 펫포인트 1,000점이 적립됩니다.</p>
+                                                        <p class="txt-m">이메일 인증 시 펫포인트 <i class="txt-roboto">1,000</i>점이 적립됩니다.</p>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -374,7 +374,7 @@
                                                                             <span class="square"></span>
                                                                         </span>
                                                                         <span class="check-subcmt">
-                                                                            <p class="cmt">SMS 정보 수신 동의</p>
+                                                                            <p class="cmt"><i class="txt-roboto">SMS</i> 정보 수신 동의</p>
                                                                         </span>
                                                                     </label>
                                                                 </div>
@@ -387,7 +387,7 @@
                                                                             <span class="square"></span>
                                                                         </span>
                                                                         <span class="check-subcmt">
-                                                                            <p class="cmt">MMS 정보 수신 동의</p>
+                                                                            <p class="cmt"><i class="txt-roboto">MMS</i> 정보 수신 동의</p>
                                                                         </span>
                                                                     </label>
                                                                 </div>
