--- a/petdoc_pc/edit_petinfo.html
+++ b/petdoc_pc/edit_petinfo.html
@@ -348,7 +348,7 @@
                                         하나맘
                                     </p>
                                     <p class="user-lv">
-                                        LV.1.그냥주이니
+                                        <span class="txt-roboto">LV.1.</span>그냥주이니
                                     </p>
                                 </div>
                                 <ul class="left-nav">
@@ -382,6 +382,7 @@
                                                 </div>
                                             </div>
                                             <!-- <p class="name-block">나니</p> -->
+                                            <a href="#" class="sub-text">반려동물 사진(선택)</a>
                                         </div>
                                         <div class="tab-toggle-block">
                                             <!--tab1-------------------------------------------------------------------->
@@ -435,7 +436,7 @@
                                                                                 <label>
                                                                                     <input type="radio" name="breed"
                                                                                         class="toggle-trigger"
-                                                                                        data-toggle-index="no-block">
+                                                                                        data-toggle-index="1">
                                                                                     <span class="radio-circle">
                                                                                         <span class="circle"></span>
                                                                                     </span>
@@ -448,6 +449,15 @@
                                                                     </ul>
                                                                     <div class="toggle-block active">
                                                                         <input type="text" value="포메라니안">
+                                                                    </div>
+                                                                    <div class="toggle-block">
+                                                                        <div class="wrap-custom-select">
+                                                                            <select class="custom-select">
+                                                                                <option value="소형">소형 0~10kg</option>
+                                                                                <option value="중형">중형 10~25kg</option>
+                                                                                <option value="대형">대형 25kg 이상</option>
+                                                                            </select>
+                                                                        </div>
                                                                     </div>
                                                                 </td>
                                                             </tr>
