--- a/petdoc_pc/index.html
+++ b/petdoc_pc/index.html
@@ -52,5 +52,6 @@
         <a href="entrance.html">진입페이지</a>
         <a href="point.html">포인트</a>
         <a href="buttons.html">버튼들</a>
+        <a href="left_menu.html">좌측메뉴</a>
 </body>
 </html>
