--- a/petdoc_pc/left_menu.html
+++ b/petdoc_pc/left_menu.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <script src="js/jquery.min.js"></script>
     <script src="js/live.js"></script>
-    <script src="js/dropkick.js"></script>
 </head>
 
 <body>
@@ -188,182 +187,29 @@
                     <!--//커스터밀-->
                     <div class="customeal">
                         <div class="wrap-2-column">
-                            <!--좌측유저프로필및네비-->
-                            <div class="left-1-column">
-                                <div class="user-info">
-                                    <p class="user-picture">
-                                        <img src="img/customeal/mypet.png" alt="">
-                                    </p>
-                                    <p class="user-name">
-                                        하나맘
-                                    </p>
-                                    <p class="user-lv">
-                                        <span class="txt-roboto">LV.1.</span>그냥주이니
-                                    </p>
-                                </div>
-                                <ul class="left-nav">
-                                    <li><a href="#">반려동물 정보</a></li>
-                                    <li><a href="#">북마크</a></li>
-                                    <li><a href="#">펫 포인트</a></li>
-                                    <li><a href="#">내 게시글</a></li>
-                                    <li><a href="#">정보 변경</a></li>
-                                </ul>
-                            </div>
-                            <!--우측내용-->
-                            <div class="right-2-column">
-                                <div class="wrap-2-column-content">
-                                    <div class="cert-box">
-                                        <h3 class="txt-tit">본인확인</h3>
-                                        <div class="txt-dsc">
-                                            고객님의 정보를 안전하게 보호하기 위해<br>
-                                            본인 확인 절차를 거칩니다.
-                                        </div>
-                                        <div class="cert-confirm-block">
-                                            <div class="wrap-btn-global btn-red">
-                                                <button type="submit" class="btn-global active  last-form">
-                                                    <span>본인확인</span>
-                                                </button>
-                                                <span class="txt-note">*본인확인이 되지 않은 고객님의 경우, 최초 <i class="txt-roboto">1</i>회<br> 본인확인을 통해 본인임을
-                                                    확인해주시기
-                                                    바랍니다.</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--커스터밀//-->
-                        </div>
-                    </div>
-                </div>
-                <!-- 기존 푸터 영역 -->
-                <div class="footer">
-                    <div class="footer_inner">
-                        <a href="#" class="common-footer-img-logo">
-                            <span class="blind">푸터 petdoc 로고 이미지</span>
-                        </a>
-                        <ul class="menu_list">
-                            <li class="list_item">
-                                <a href="#">회사소개</a>
-                            </li>
-                            <li class="list_item">
-                                <a href="#">이용약관</a>
-                            </li>
-                            <li class="list_item">
-                                <a href="#">개인정보 처리방침</a>
-                            </li>
-                            <li class="list_item">
-                                <a href="#">브이랩</a>
-                            </li>
-                            <li class="list_item">
-                                <a href="#">브이케어</a>
-                            </li>
-
-                        </ul>
-                        <dl class="company_info">
-                            <dt class="company_info_words">
-                                <span class="blind">회사명</span>
-                            </dt>
-                            <dd class="company_info_content">
-                                (주) 펫닥
-                            </dd>
-                            <dt class="company_info_words">
-                                사업자등록번호 :
-                            </dt>
-                            <dd class="company_info_content">
-                                276 - 81 - 00265
-                            </dd>
-                            <dt class="company_info_words">
-                                대표이사 :
-                            </dt>
-                            <dd class="company_info_content">
-                                최승용
-                            </dd>
-                            <dt class="company_info_words">
-                                개인정보관리책임자 :
-                            </dt>
-                            <dd class="company_info_content">
-                                박정기
-                            </dd>
-                            <dt class="company_info_words">
-                                <span class="blind">회사 주소</span>
-                            </dt>
-                            <dd class="company_info_content">
-                                서울특별시 서초구 강남대로 79길 32 3층 펫닥
-                            </dd>
-                            <dt class="company_info_words">
-                                <span class="blind">회사 전화번호 및 업무시간</span>
-                            </dt>
-                            <dd class="company_info_content">
-                                Tel : 02.6949.3016 월-금 (10:00 - 19:00 )
-                            </dd>
-                            <dt class="company_info_words">
-                                Email :
-                            </dt>
-                            <dd class="company_info_content">
-                                hello@petdoc.co.kr
-                            </dd>
-                            <dt class="company_info_words">
-                                <span class="blind">회사 copyright 문구</span>
-                            </dt>
-                            <dd class="company_info_content">
-                                © 2019 PetDoc Inc. All Rights Reserved.
-                            </dd>
-                        </dl>
-                        <ul class="social_list">
-                            <li class="list_item">
-                                <a href="https://www.instagram.com/hello_petdoc/?hl=ko" target="_blank"
-                                    class="common-footer-btn-instagram">
-                                    <span class="blind">인스타그램 아이콘 이미지</span>
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a href="https://www.youtube.com/channel/UCDJ5mikV_sfAvD8n_ZFiTvQ" target="_blank"
-                                    class="common-footer-btn-youtube">
-                                    <span class="blind">유튜브 아이콘 이미지</span>
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a href="https://www.facebook.com/petdoc1" target="_blank"
-                                    class="common-footer-btn-facebook">
-                                    <span class="blind">페이스북 아이콘 이미지</span>
-                                </a>
-                            </li>
-                        </ul>
-                        <ul class="social_list store">
-                            <li class="list_item">
-                                <a href="https://apps.apple.com/kr/app/펫닥-내-손안에-수의사-소환-실시간-수의사-상담-앱/id1059558618"
-                                    target="_blank" class="common-footer-btn-appstore">
-                                    <span class="blind">App 스토어 이미지</span>
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a href="https://play.google.com/store/apps/details?id=kr.co.petdoc.petdoc&hl=ko"
-                                    target="_blank" class="common-footer-btn-playstore">
-                                    <span class="blind">구글 플레이 스토어 이미지</span>
-                                </a>
-                            </li>
-                        </ul>
-                        <div class="family_site_box">
-                            <button type="button" class="btn_site">
-                                <span class="btn_txt">패밀리 사이트</span>
-                                <span class="common-ic-more-small">
-                                    <span class="blind">패밀리 사이트 이동 아이콘 이미지</span>
-                                </span>
-                            </button>
-                            <!-- [D] 패밀리 사이트 레이어 노출 시 show 클래스 추가 -->
-                            <ul class="family_site_layer">
-                                <li class="list_item">
-                                    <a href="#" class="menu_txt">펫닥</a>
-                                </li>
-                                <li class="list_item">
-                                    <a href="#" class="menu_txt">브이랩</a>
-                                </li>
-                                <li class="list_item">
-                                    <a href="#" class="menu_txt">브이케어</a>
-                                </li>
+                        <div class="left-1-column">
+                            <ul class="left-nav">
+                                <li><a href="#">반려동물 정보</a></li>
+                                <li><a href="#">북마크</a></li>
+                                <li><a href="#">펫 포인트</a></li>
+                                <li><a href="#">내 게시글</a></li>
+                                <li><a href="#">정보 변경</a></li>
+                            </ul>
+                            <ul class="left-nav">
+                                <li><a class="active" href="#">반려동물 정보</a></li>
+                                <li><a class="active" href="#">북마크</a></li>
+                                <li><a class="active" href="#">펫 포인트</a></li>
+                                <li><a class="active" href="#">내 게시글</a></li>
+                                <li><a class="active" href="#">정보 변경</a></li>
                             </ul>
                         </div>
+                        <div class="right-2-column">
+                            <div class="wrap-2-column-content">
+                            </div>
+                        </div>
+                        </div>
                     </div>
+                    <!--커스터밀//-->
                 </div>
             </div>
         </div>
