--- a/petdoc_pc/mypet_list.html
+++ b/petdoc_pc/mypet_list.html
@@ -216,7 +216,7 @@
                                         </div>
                                         <div class="pet-info-block">
                                             <b class="name">나니</b>
-                                            <p class="age">나이<span>3세 1개월 (여아)</span></p>
+                                            <p class="age">나이<span><i class="txt-roboto">3</i>세 <i class="txt-roboto">1</i>개월 (여아)</span></p>
                                             <p class="breed">품종<span>터키시 앙고라</span></p>
                                         </div>
                                         <div class="pet-status-block">
@@ -229,7 +229,7 @@
                                         </div>
                                         <div class="pet-info-block">
                                             <b class="name">달구</b>
-                                            <p class="age">나이<span>3세 8개월 (남아)</span></p>
+                                            <p class="age">나이<span><i class="txt-roboto">3</i>세 <i class="txt-roboto">1</i>개월 (남아)</span></p>
                                             <p class="breed">품종<span>포메라니안</span></p>
                                         </div>
                                         <div class="pet-status-block">
@@ -243,7 +243,7 @@
                                         </div>
                                         <div class="pet-info-block">
                                             <b class="name">하나</b>
-                                            <p class="age">나이<span>3세 8개월(남아)</span></p>
+                                            <p class="age">나이<span><i class="txt-roboto">3</i>세 <i class="txt-roboto">8</i>개월(남아)</span></p>
                                             <p class="breed">품종<span>포메라니안</span></p>
                                         </div>
                                         <div class="pet-status-block">
@@ -257,7 +257,7 @@
                                         </div>
                                         <div class="pet-info-block">
                                             <b class="name">라떼</b>
-                                            <p class="age">나이<span>3세 8개월(남아)</span></p>
+                                            <p class="age">나이<span><i class="txt-roboto">3</i>세 <i class="txt-roboto">9</i>개월(남아)</span></p>
                                             <p class="breed">품종<span>포메라니안</span></p>
                                         </div>
                                         <div class="pet-status-block">
