--- a/petdoc_pc/result.html
+++ b/petdoc_pc/result.html
@@ -276,7 +276,7 @@
                                     <div class="column">
                                         <h3 class="txt-tit">하루 권장 칼로리</h3>
                                         <div class="txt-dsc">
-                                            하나의 연령주기와 몸무게를 고려하였을 때 하루 필요 칼로리는 500kcal 입니다.
+                                            하나의 연령주기와 몸무게를 고려하였을 때 하루 필요 칼로리는 <span class="txt-roboto">500kcal</span> 입니다.
                                         </div>
                                     </div>
                                     <div class="column">
@@ -284,7 +284,7 @@
                                         <div class="txt-dsc">
                                             <ul class="dot-list">
                                                 <li><span>dot</span>
-                                                    <p>하나는 3세 1개월로 연령주기는 성년기 입니다.</p>
+                                                    <p>하나는 <i class="txt-roboto">10</i> 세 <i class="txt-roboto">0</i> 개월로 연령주기는 성년기 입니다.</p>
                                                 </li>
                                                 <li><span>dot</span>
                                                     <p>성년기 반려동물의 경우 적정 체중을 일정하게 유지하는 것이 중요합니다.</p>
@@ -309,7 +309,7 @@
                                                     <div class="level-text-group">
                                                         <span>성장기<br><i><b class="level1 txt-num">11</b>개월 이하</i></span>
                                                         <span>성년기<br><i><b class="level1 txt-num">11</b>개월 - <b
-                                                                    class="level2">95</b>개월</i></span>
+                                                                    class="level2 txt-num">95</b>개월</i></span>
                                                         <span class="active">노년기<br><i><b
                                                                     class="level3 txt-num">95</b>개월 이상</i></span>
                                                     </div>
@@ -325,7 +325,7 @@
                                                     <p>하나의 품종은 포메라니안으로 소형견 입니다.</p>
                                                 </li>
                                                 <li><span>dot</span>
-                                                    <p>하나의 몸무게는 7kg으로 성년기 포메라니안 표준 몸무게를 기준으로 보았을 때 표준입니다. 계속해서 정상체중을 유지할
+                                                    <p>하나의 몸무게는 <i class="txt-roboto">7kg</i>으로 성년기 포메라니안 표준 몸무게를 기준으로 보았을 때 표준입니다. 계속해서 정상체중을 유지할
                                                         수
                                                         있도록
                                                         하루권장량을 지켜서
@@ -349,10 +349,10 @@
                                                     <div class="level"> <i></i></div>
                                                     <div class="cycle-bar"><i></i></div>
                                                     <div class="level-text-group">
-                                                        <span>외소<br><i><b class="level1 txt-num">7</b>kg 이하</i></span>
-                                                        <span class="active">표준<br><i><b class="level1 txt-num">7</b>kg
-                                                                - <b class="level2 txt-num">9</b>kg</i></span>
-                                                        <span>비만<br><i><b class="level3 txt-num">9</b>kg 이상</i></span>
+                                                        <span>외소<br><i><b class="level1 txt-num">7</b><i class="txt-roboto">kg</i>이하</i></span>
+                                                        <span class="active">표준<br><i><b class="level1 txt-num">7</b><i class="txt-roboto">kg</i>
+                                                                - <b class="level2 txt-num">9</b><i class="txt-roboto">kg</i></i></span>
+                                                        <span>비만<br><i><b class="level3 txt-num">9</b><i class="txt-roboto">kg</i>이상</i></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -365,7 +365,7 @@
                                     <div class="column">
                                         <h3 class="txt-tit">특수 상황</h3>
                                         <p class="txt-dsc">
-                                            하나는 임신 5주 상태로 충분한 영양 공급이 이루어 져야 합니다. 6주 이상의 임신 후기에는 사료의 급여량 도 늘려야 하니 권장 급여량을
+                                            하나는 임신 <i class="txt-roboto">5</i>주 상태로 충분한 영양 공급이 이루어 져야 합니다. <i class="txt-roboto">6</i>주 이상의 임신 후기에는 사료의 급여량 도 늘려야 하니 권장 급여량을
                                             참고하여 급여
                                             해주세요.
                                         </p>
@@ -375,7 +375,7 @@
                                         <div class="txt-dsc">
                                             <ul class="dot-list">
                                                 <li><span>dot</span>
-                                                    <p>심바의 1일 권장 급여량 150g을 1일 2회로 나누어 급여해주세요.</p>
+                                                    <p>심바의 <i class="txt-roboto">1</i>일 권장 급여량 <i class="txt-roboto">150g</i>을 <i class="txt-roboto">1</i>일 <i class="txt-roboto">2</i>회로 나누어 급여해주세요.</p>
                                                 </li>
                                                 <li><span>dot</span>
                                                     <p>동봉되어 있는 계량컵을 사용하여 사료량을 측정하여 급여해주시면 됩니다.</p>
@@ -388,15 +388,15 @@
                                         <div class="txt-dsc">
                                             <ul class="dot-list">
                                                 <li><span>dot</span>
-                                                    <p>주식 사료 100g당 0,000원</p>
+                                                    <p>주식 사료 <i class="txt-roboto">100g</i>당 <i class="txt-roboto">100g</i>원</p>
                                                 </li>
                                                 <li><span>dot</span>
-                                                    <p>보조 영양제 7g당 0,000원</p>
+                                                    <p>보조 영양제 <i class="txt-roboto">7g</i>당 <i class="txt-roboto">100g</i>원</p>
                                                 </li>
                                             </ul>
                                         </div>
                                         <p class="i-box">
-                                            * 내 반려동물의 1일 권장 급여량과 급여 기간에 따라서 가격이 다르게 책정됩니다.<br>
+                                            * 내 반려동물의 <i class="txt-roboto">1</i>일 권장 급여량과 급여 기간에 따라서 가격이 다르게 책정됩니다.<br>
                                             * 커스터밀 맞춤식은 일반적인 건강관리 및 예방차원의 보다 전문적인 식단을 제공하고 있으나, 질병을 직접적으로 치료하는 식단은 아님으로
                                             질병 치료식은 가까운
                                             동물병원에 문의하시길 권장합니다.
@@ -414,8 +414,8 @@
                                                         <!--사료에맞는 클래스추가로 리스트컬러변경  c-fat:비만컬러|c-digest:소화컬러|c-skin:피모컬러|c-kidney:신장컬러|c-immune:면역컬러|c-joint:관절컬러|c-multi:멀티컬러-->
                                                         <div class="wrap-pd-name  c-fat">
                                                             <h2 class="pd-name">커스터밀 연어&amp;참치</h2>
-                                                            <p><span>일일 권장 급여량 </span><span class="line">선</span><b>2파우치
-                                                                    (175g)</b></p>
+                                                            <p><span>일일 권장 급여량 </span><span class="line">선</span><b><i class="txt-roboto">2</i>파우치
+                                                                (<i class="txt-roboto">175g</i>)</b></p>
                                                         </div>
                                                         <img src="img/customeal/diagnosis-result-img-weight@3x.png"
                                                             alt="">
@@ -423,8 +423,8 @@
                                                     <div class="swiper-slide">
                                                         <div class="wrap-pd-name  c-joint">
                                                             <h2 class="pd-name">커스터밀 소고기</h2>
-                                                            <p><span>일일 권장 급여량 </span><span class="line">선</span><b>2파우치
-                                                                    (175g)</b></p>
+                                                            <p><span>일일 권장 급여량 </span><span class="line">선</span><b><i class="txt-roboto">2</i>파우치
+                                                                (<i class="txt-roboto">175g</i>)</b></p>
                                                         </div>
                                                         <img src="img/customeal/diagnosis-result-img-weight@3x_2.png"
                                                             alt="">
@@ -530,14 +530,14 @@
                                         <h3 class="txt-tit">가격</h3>
                                         <ul class="dot-list price">
                                             <li><span>dot</span>
-                                                <p>주식 사료 100g당 0,000원.</p>
+                                                <p>주식 사료 <i class="txt-roboto">100g</i>당 <i class="txt-roboto">0,000</i>원</p>
                                             </li>
                                             <li><span>dot</span>
-                                                <p>보조 영양제 7g당 0,000원</p>
+                                                <p>보조 영양제  <i class="txt-roboto">7g</i>당 <i class="txt-roboto">0,000</i>원</p>
                                             </li>
                                         </ul>
                                         <p class="i-box">
-                                            * 내 반려동물의 1일 권장 급여량과 급여 기간에 따라서 가격이 다르게 책정됩니다.<br>
+                                            * 내 반려동물의 <i class="txt-roboto">1</i>일 권장 급여량과 급여 기간에 따라서 가격이 다르게 책정됩니다.<br>
                                             * 커스터밀 맞춤식은 일반적인 건강관리 및 예방차원의 보다 전문적인 식단을 제공하고 있으나, 질병을 직접적으로 치료하는 식단은 아님으로
                                             질병
                                             치료식은
