--- a/petdoc_pc/cert_1.html
+++ b/petdoc_pc/cert_1.html
@@ -198,7 +198,7 @@
                                         하나맘
                                     </p>
                                     <p class="user-lv">
-                                        LV.1.그냥주이니
+                                        <span class="txt-roboto">LV.1.</span>그냥주이니
                                     </p>
                                 </div>
                                 <ul class="left-nav">
