--- a/petdoc_pc/form_condition_05_preference.html
+++ b/petdoc_pc/form_condition_05_preference.html
@@ -231,7 +231,7 @@
                                                         <label>
                                                             <input type="checkbox"
                                                                 class="input-checkbox required-input " name="salmon"
-                                                                value="" disabled="">
+                                                                value="">
                                                             <div class="radio-thumb">
                                                             </div>
                                                             <p>연어&amp;참치</p>
