--- a/petdoc_pc/form_register_04_age.html
+++ b/petdoc_pc/form_register_04_age.html
@@ -222,7 +222,6 @@
                                             <div class="toggle-block active">
                                                 <div class="wrap-custom-select">
                                                     <select class="custom-select">
-                                                        <option disabled selected class="hidden-option">0000년</option>
                                                         <option value="1">2020</option>
                                                         <option value="2">2019</option>
                                                         <option value="3">2018</option>
@@ -243,7 +242,6 @@
                                                 </div>
                                                 <div class="wrap-custom-select">
                                                     <select class="custom-select">
-                                                        <option disabled selected class="hidden-option">0월</option>
                                                         <option value="1">12월</option>
                                                         <option value="2">11월</option>
                                                         <option value="3">10월</option>
@@ -260,7 +258,6 @@
                                                 </div>
                                                 <div class="wrap-custom-select">
                                                     <select class="custom-select">
-                                                        <option disabled selected class="hidden-option">0월</option>
                                                         <option value="1">30일</option>
                                                         <option value="2">29일</option>
                                                         <option value="3">28일</option>
@@ -279,7 +276,7 @@
                                             <div class="toggle-block">
                                                 <div class="wrap-custom-select">
                                                     <select class="custom-select">
-                                                        <option disabled selected class="hidden-option">0세</option>
+                                                        <option value="0">0세</option>
                                                         <option value="1">1세</option>
                                                         <option value="2">2세</option>
                                                         <option value="3">3세</option>
@@ -288,7 +285,7 @@
                                                 </div>
                                                 <div class="wrap-custom-select">
                                                     <select class="custom-select">
-                                                        <option disabled selected class="hidden-option">0개월</option>
+                                                        <option value="0">0개월</option>
                                                         <option value="1">1월</option>
                                                         <option value="2">2월</option>
                                                         <option value="3">3월</option>
