--- a/petdoc_pc/mypet_list_2.html
+++ b/petdoc_pc/mypet_list_2.html
@@ -181,7 +181,7 @@
                                     </div>
                                     <div class="pet-info-block">
                                         <b class="name">나니</b>
-                                        <p class="age">나이<span>3세 1개월 (여아)</span></p>
+                                        <p class="age">나이<span><i class="txt-roboto">3</i>세 <i class="txt-roboto">1</i>개월 (여아)</span></p>
                                         <p class="breed">품종<span>터키시 앙고라</span></p>
                                     </div>
                                     <div class="pet-status-block">
@@ -194,7 +194,7 @@
                                     </div>
                                     <div class="pet-info-block">
                                         <b class="name">달구</b>
-                                        <p class="age">나이<span>3세 8개월 (남아)</span></p>
+                                        <p class="age">나이<span><i class="txt-roboto">3</i>세 <i class="txt-roboto">1</i>개월 (남아)</span></p>
                                         <p class="breed">품종<span>포메라니안</span></p>
                                     </div>
                                     <div class="pet-status-block">
@@ -208,7 +208,7 @@
                                     </div>
                                     <div class="pet-info-block">
                                         <b class="name">하나</b>
-                                        <p class="age">나이<span>3세 8개월(남아)</span></p>
+                                        <p class="age">나이<span><i class="txt-roboto">3</i>세 <i class="txt-roboto">8</i>개월(남아)</span></p>
                                         <p class="breed">품종<span>포메라니안</span></p>
                                     </div>
                                     <div class="pet-status-block">
@@ -222,7 +222,7 @@
                                     </div>
                                     <div class="pet-info-block">
                                         <b class="name">라떼</b>
-                                        <p class="age">나이<span>3세 8개월(남아)</span></p>
+                                        <p class="age">나이<span><i class="txt-roboto">3</i>세 <i class="txt-roboto">8</i>개월(남아)</span></p>
                                         <p class="breed">품종<span>포메라니안</span></p>
                                     </div>
                                     <div class="pet-status-block">
