--- a/petdoc_pc/point.html
+++ b/petdoc_pc/point.html
@@ -199,7 +199,7 @@
                                         하나맘
                                     </p>
                                     <p class="user-lv">
-                                        LV.1.그냥주이니
+                                        <span class="txt-roboto">LV.1.</span>그냥주이니
                                     </p>
                                 </div>
                                 <ul class="left-nav">
@@ -229,8 +229,8 @@
                                         <div class="date-block">
                                             <div class="wrap-input-date">
                                                 <div class="wrap-date-pick">
-                                                    <input class="date-pick" type="text" id="sdate">
-                                                    <input class="date-pick" type="text" id="edate">
+                                                    <div class="date-pick" id="sdate"></div>
+                                                    <div class="date-pick" id="edate"></div>
                                                 </div>
                                                 <div class="wrap-custom-select">
                                                     <select class="custom-select">
