--- a/petdoc_pc/secession.html
+++ b/petdoc_pc/secession.html
@@ -220,7 +220,7 @@
                                         하나맘
                                     </p>
                                     <p class="user-lv">
-                                        LV.1.그냥주이니
+                                       <span class="txt-roboto">LV.1.</span>그냥주이니
                                     </p>
                                 </div>
                                 <ul class="left-nav">
@@ -245,7 +245,7 @@
                                                     <div class="check-label">
                                                         <label>
                                                             <span class="check-subcmt">
-                                                                <p class="cmt">펫닥(Petdoc, V+lab)</p>
+                                                                <p class="cmt">펫닥(<i class="txt-roboto">Petdoc, V+lab</i>)</p>
                                                             </span>
                                                             <input type="checkbox" name="service" class="toggle-detail"
                                                                 data-toggle-index="0">
@@ -259,7 +259,7 @@
                                                     <div class="check-label">
                                                         <label>
                                                             <span class="check-subcmt">
-                                                                <p class="cmt">V+care, 펫닥 제휴 동물병원</p>
+                                                                <p class="cmt"><i class="txt-roboto">V+care</i>, 펫닥 제휴 동물병원</p>
                                                             </span>
                                                             <input type="checkbox" name="service" class="toggle-detail"
                                                                 data-toggle-index="1">
@@ -293,7 +293,7 @@
                                                         <p>제품 구매정보</p>
                                                     </li>
                                                     <li><span>dot</span>
-                                                        <p>보유중인 펫포인트 정보 (잔여 0,000P)</p>
+                                                        <p>보유중인 펫포인트 정보 (잔여 <i class="txt-roboto">0,000P</i>)</p>
                                                     </li>
                                                 </ul>
                                             </div>
